2006-05-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/srccode/audiofile.cpp, itpp/srccode/audiofile.h,
	itpp/srccode/sources.mk:
	Added templated read_endian and write_endian functions, which
	replaced the old macro based read/write ones. Finally removed
	`machdep.h', because endianness is now handled run-time.

2006-05-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/sources.mk, itpp/srccode/audiofile.cpp,
	itpp/srccode/machdep.h, itpp/srccode/sources.mk:
	Moved `machdep.h' into `itpp/srccode', since it is only included
	in `audiofile.cpp'. Cleaned up the `machdep.h' code, by the way.

	* itpp/base/binfile.cpp, itpp/base/binfile.h,
	itpp/base/itfile.cpp, itpp/base/itfile.h, itpp/base/itmisc.cpp,
	itpp/base/itmisc.h, itpp/itbase.h: 
	Changed the method of detecting the endianness of a system -
	`itpp/base/machdep.h' is not used any more in the base module.

	* doc/local/verification.doc: Updated to reflect recent tests
	under Windows (MinGW with IT++ External).

==============================================================================

2006-05-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.10.2 released (SVN tag: release-3-10-2)

	* NEWS: Updated to reflect recent changes.

	* doc/local/index.doc.in, doc/local/installation.doc, INSTALL:
	Updated according to the recent changes.

	* doc/local/authors.doc: Cosmetic changes.

	* doc/local/verification.doc: Updated to reflect recent tests
	under Windows (Cygwin and MinGW with ACML).

	* configure.ac, itpp/base/trihypfunc.h: Added checks for acosh(),
	asinh() and atanh() functions.

	* itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h: Finally fixed
	the declaration of `signgam' and definition and lgamma() function.
	This should solve problems on systems where lgamma() does not set
	`signgam' variable, e.g. under MinGW.

2006-05-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/fix_test.cpp, tests/fix_test.ref, tests/llr_test.cpp,